--- a/courses.html
+++ b/courses.html
@@ -32,73 +32,77 @@
 
   <section class="courses-container">
 
-    <div class="course-card" style="grid-area: ai; grid-column: span 2; grid-row: span 2;">
-  <img src="images/american_institutions.png">
-  <div class="overlay"></div>
-  <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
-</div>
+  <!-- AI first -->
+  <div class="course-card" style="grid-area: ai; grid-column: span 2; grid-row: span 2;">
+    <img src="images/american_institutions.png">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
+  </div>
 
-    <div class="course-card" style="grid-area: cm;">
-      <img src="images/communication.png">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>Communication (CM)</h3></div>
-    </div>
+  <!-- Then small cards -->
+  <div class="course-card" style="grid-area: cm;">
+    <img src="images/communication.png">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Communication (CM)</h3></div>
+  </div>
 
-    <div class="course-card" style="grid-area: ql;">
-      <img src="images/quantitative_literacy.png">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>Quantitative Literacy (QL)</h3></div>
-    </div>
+  <div class="course-card" style="grid-area: ql;">
+    <img src="images/quantitative_literacy.png">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Quantitative Literacy (QL)</h3></div>
+  </div>
 
-    <div class="course-card" style="grid-area: en;">
-      <img src="images/composition.png">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>Composition (EN)</h3></div>
-    </div>
+  <div class="course-card" style="grid-area: en;">
+    <img src="images/composition.png">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Composition (EN)</h3></div>
+  </div>
 
-    <div class="course-card" style="grid-area: lw;">
-      <img src="images/lifelong_wellness.png">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
-    </div>
+  <div class="course-card" style="grid-area: lw;">
+    <img src="images/lifelong_wellness.png">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
+  </div>
 
-    <div class="course-card" style="grid-area: ig;">
-      <img src="images/international_global.png">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>International & Global (IG)</h3></div>
-    </div>
+  <div class="course-card" style="grid-area: ig;">
+    <img src="images/international_global.png">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>International & Global (IG)</h3></div>
+  </div>
 
-    <div class="course-card" style="grid-area: ls;">
-      <img src="images/life_science.png">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>Life Science (LS)</h3></div>
-    </div>
+  <div class="course-card" style="grid-area: ls;">
+    <img src="images/life_science.png">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Life Science (LS)</h3></div>
+  </div>
 
-    <div class="course-card" style="grid-area: fa;">
-      <img src="images/course2.png">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>Fine Arts (FA)</h3></div>
-    </div>
+  <div class="course-card" style="grid-area: fa;">
+    <img src="images/course2.png">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Fine Arts (FA)</h3></div>
+  </div>
 
-    <div class="course-card" style="grid-area: ss;">
-      <img src="images/social_science.png">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>Social Science (SS)</h3></div>
-    </div>
+  <div class="course-card" style="grid-area: ss;">
+    <img src="images/social_science.png">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Social Science (SS)</h3></div>
+  </div>
 
-    <div class="course-card" style="grid-area: hu;">
-      <img src="images/course1.png">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>Humanities (HU)</h3></div>
-    </div>
+  <div class="course-card" style="grid-area: ps;">
+    <img src="images/physical_science.png">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
+  </div>
 
-    <div class="course-card" style="grid-area: ps;">
-      <img src="images/physical_science.png">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
-    </div>
+  <!-- HU last (because it sits low) -->
+  <div class="course-card" style="grid-area: hu; grid-column: span 2; grid-row: span 2;">
+    <img src="images/course1.png">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Humanities (HU)</h3></div>
+  </div>
 
-  </section>
+</section>
+
 </main>
 
   <!-- FOOTER -->
