--- a/courses.html
+++ b/courses.html
@@ -32,14 +32,12 @@
 
   <section class="courses-container">
 
-  <!-- AI first -->
-  <div class="course-card" style="grid-area: ai; grid-column: span 2; grid-row: span 2;">
+  <div class="course-card" style="grid-area: ai;">
     <img src="images/american_institutions.png">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
   </div>
 
-  <!-- Then small cards -->
   <div class="course-card" style="grid-area: cm;">
     <img src="images/communication.png">
     <div class="overlay"></div>
@@ -94,8 +92,7 @@
     <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
   </div>
 
-  <!-- HU last (because it sits low) -->
-  <div class="course-card" style="grid-area: hu; grid-column: span 2; grid-row: span 2;">
+  <div class="course-card" style="grid-area: hu;">
     <img src="images/course1.png">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Humanities (HU)</h3></div>
