--- a/courses.html
+++ b/courses.html
@@ -32,11 +32,11 @@
 
   <section class="courses-container">
 
-  <div class="course-card" style="grid-area: ai;">
-    <img src="images/american_institutions.png">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
-  </div>
+  <div class="course-card" id="ai-card">
+  <img src="images/american_institutions.png" alt="American Institutions">
+  <div class="overlay"></div>
+  <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
+</div>
 
   <div class="course-card" style="grid-area: cm;">
     <img src="images/communication.png">
