--- a/courses.html
+++ b/courses.html
@@ -32,16 +32,10 @@
 
   <section class="courses-container">
 
-  <div class="course-card" id="ai-card">
-  <img src="images/american_institutions.png" alt="American Institutions">
-  <div class="overlay"></div>
-  <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
-</div>
-
-  <div class="course-card" style="grid-area: cm;">
-    <img src="images/communication.png">
+  <div class="course-card big" id="ai-card">
+    <img src="images/american_institutions.png" alt="American Institutions">
     <div class="overlay"></div>
-    <div class="text-overlay"><h3>Communication (CM)</h3></div>
+    <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
   </div>
 
   <div class="course-card" style="grid-area: ql;">
@@ -56,10 +50,10 @@
     <div class="text-overlay"><h3>Composition (EN)</h3></div>
   </div>
 
-  <div class="course-card" style="grid-area: lw;">
-    <img src="images/lifelong_wellness.png">
+  <div class="course-card big" style="grid-area: hu;">
+    <img src="images/course1.png">
     <div class="overlay"></div>
-    <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
+    <div class="text-overlay"><h3>Humanities (HU)</h3></div>
   </div>
 
   <div class="course-card" style="grid-area: ig;">
@@ -80,10 +74,16 @@
     <div class="text-overlay"><h3>Fine Arts (FA)</h3></div>
   </div>
 
-  <div class="course-card" style="grid-area: ss;">
-    <img src="images/social_science.png">
+  <div class="course-card" style="grid-area: cm;">
+    <img src="images/communication.png">
     <div class="overlay"></div>
-    <div class="text-overlay"><h3>Social Science (SS)</h3></div>
+    <div class="text-overlay"><h3>Communication (CM)</h3></div>
+  </div>
+
+  <div class="course-card" style="grid-area: lw;">
+    <img src="images/lifelong_wellness.png">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
   </div>
 
   <div class="course-card" style="grid-area: ps;">
@@ -92,10 +92,10 @@
     <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
   </div>
 
-  <div class="course-card" style="grid-area: hu;">
-    <img src="images/course1.png">
+  <div class="course-card" style="grid-area: ss;">
+    <img src="images/social_science.png">
     <div class="overlay"></div>
-    <div class="text-overlay"><h3>Humanities (HU)</h3></div>
+    <div class="text-overlay"><h3>Social Science (SS)</h3></div>
   </div>
 
 </section>
