--- a/courses.html
+++ b/courses.html
@@ -32,70 +32,81 @@
 
   <section class="courses-container">
 
+  <!-- 1. AI - MUST BE FIRST -->
   <div class="course-card big" id="ai-card">
     <img src="images/american_institutions.png" alt="American Institutions">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
   </div>
 
+  <!-- 2. QL -->
   <div class="course-card" style="grid-area: ql;">
     <img src="images/quantitative_literacy.png">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Quantitative Literacy (QL)</h3></div>
   </div>
 
+  <!-- 3. EN -->
   <div class="course-card" style="grid-area: en;">
     <img src="images/composition.png">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Composition (EN)</h3></div>
   </div>
 
+  <!-- 4. HU -->
   <div class="course-card big" style="grid-area: hu;">
     <img src="images/course1.png">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Humanities (HU)</h3></div>
   </div>
 
+  <!-- 5. IG -->
   <div class="course-card" style="grid-area: ig;">
     <img src="images/international_global.png">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>International & Global (IG)</h3></div>
   </div>
 
+  <!-- 6. LS -->
   <div class="course-card" style="grid-area: ls;">
     <img src="images/life_science.png">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Life Science (LS)</h3></div>
   </div>
 
+  <!-- 7. FA -->
   <div class="course-card" style="grid-area: fa;">
     <img src="images/course2.png">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Fine Arts (FA)</h3></div>
   </div>
 
-  <div class="course-card" style="grid-area: cm;">
-    <img src="images/communication.png">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Communication (CM)</h3></div>
-  </div>
-
-  <div class="course-card" style="grid-area: lw;">
-    <img src="images/lifelong_wellness.png">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
-  </div>
-
+  <!-- 8. PS -->
   <div class="course-card" style="grid-area: ps;">
     <img src="images/physical_science.png">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
   </div>
 
+  <!-- 9. SS -->
   <div class="course-card" style="grid-area: ss;">
     <img src="images/social_science.png">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Social Science (SS)</h3></div>
+  </div>
+
+  <!-- 10. CM - Moved to bottom -->
+  <div class="course-card" style="grid-area: cm;">
+    <img src="images/communication.png">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Communication (CM)</h3></div>
+  </div>
+
+  <!-- 11. LW - Moved to bottom -->
+  <div class="course-card" style="grid-area: lw;">
+    <img src="images/lifelong_wellness.png">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
   </div>
 
 </section>
