--- a/courses.html
+++ b/courses.html
@@ -32,81 +32,81 @@
 
   <section class="courses-container">
 
-  <!-- 1. AI - MUST BE FIRST -->
-  <div class="course-card big" id="ai-card">
+  <!-- AI - American Institutions (Big) -->
+  <div class="course-card" style="grid-column: 1 / span 2; grid-row: 1 / span 2;">
     <img src="images/american_institutions.png" alt="American Institutions">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
   </div>
 
-  <!-- 2. QL -->
-  <div class="course-card" style="grid-area: ql;">
-    <img src="images/quantitative_literacy.png">
+  <!-- QL - Quantitative Literacy -->
+  <div class="course-card" style="grid-column: 3; grid-row: 1;">
+    <img src="images/quantitative_literacy.png" alt="Quantitative Literacy">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Quantitative Literacy (QL)</h3></div>
   </div>
 
-  <!-- 3. EN -->
-  <div class="course-card" style="grid-area: en;">
-    <img src="images/composition.png">
+  <!-- EN - Composition -->
+  <div class="course-card" style="grid-column: 4; grid-row: 1;">
+    <img src="images/composition.png" alt="Composition">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Composition (EN)</h3></div>
   </div>
 
-  <!-- 4. HU -->
-  <div class="course-card big" style="grid-area: hu;">
-    <img src="images/course1.png">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Humanities (HU)</h3></div>
-  </div>
-
-  <!-- 5. IG -->
-  <div class="course-card" style="grid-area: ig;">
-    <img src="images/international_global.png">
+  <!-- IG - International & Global -->
+  <div class="course-card" style="grid-column: 3; grid-row: 2;">
+    <img src="images/international_global.png" alt="International & Global">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>International & Global (IG)</h3></div>
   </div>
 
-  <!-- 6. LS -->
-  <div class="course-card" style="grid-area: ls;">
-    <img src="images/life_science.png">
+  <!-- LS - Life Science -->
+  <div class="course-card" style="grid-column: 4; grid-row: 2;">
+    <img src="images/life_science.png" alt="Life Science">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Life Science (LS)</h3></div>
   </div>
 
-  <!-- 7. FA -->
-  <div class="course-card" style="grid-area: fa;">
-    <img src="images/course2.png">
+  <!-- FA - Fine Arts -->
+  <div class="course-card" style="grid-column: 1; grid-row: 3;">
+    <img src="images/course2.png" alt="Fine Arts">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Fine Arts (FA)</h3></div>
   </div>
 
-  <!-- 8. PS -->
-  <div class="course-card" style="grid-area: ps;">
-    <img src="images/physical_science.png">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
-  </div>
-
-  <!-- 9. SS -->
-  <div class="course-card" style="grid-area: ss;">
-    <img src="images/social_science.png">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Social Science (SS)</h3></div>
-  </div>
-
-  <!-- 10. CM - Moved to bottom -->
-  <div class="course-card" style="grid-area: cm;">
-    <img src="images/communication.png">
+  <!-- CM - Communication -->
+  <div class="course-card" style="grid-column: 2; grid-row: 3;">
+    <img src="images/communication.png" alt="Communication">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Communication (CM)</h3></div>
   </div>
 
-  <!-- 11. LW - Moved to bottom -->
-  <div class="course-card" style="grid-area: lw;">
-    <img src="images/lifelong_wellness.png">
+  <!-- LW - Lifelong Wellness -->
+  <div class="course-card" style="grid-column: 3; grid-row: 3;">
+    <img src="images/lifelong_wellness.png" alt="Lifelong Wellness">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
+  </div>
+
+  <!-- PS - Physical Science -->
+  <div class="course-card" style="grid-column: 4; grid-row: 3;">
+    <img src="images/physical_science.png" alt="Physical Science">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
+  </div>
+
+  <!-- SS - Social Science -->
+  <div class="course-card" style="grid-column: 2; grid-row: 4;">
+    <img src="images/social_science.png" alt="Social Science">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Social Science (SS)</h3></div>
+  </div>
+
+  <!-- HU - Humanities (Big) -->
+  <div class="course-card" style="grid-column: 3 / span 2; grid-row: 4 / span 2;">
+    <img src="images/course1.png" alt="Humanities">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Humanities (HU)</h3></div>
   </div>
 
 </section>
