--- a/courses.html
+++ b/courses.html
@@ -32,81 +32,81 @@
 
   <section class="courses-container">
 
-  <!-- AI - American Institutions (Big) -->
+  <!-- AI (BIG) -->
   <div class="course-card" style="grid-column: 1 / span 2; grid-row: 1 / span 2;">
     <img src="images/american_institutions.png" alt="American Institutions">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
   </div>
 
-  <!-- QL - Quantitative Literacy -->
+  <!-- QL -->
   <div class="course-card" style="grid-column: 3; grid-row: 1;">
-    <img src="images/quantitative_literacy.png" alt="Quantitative Literacy">
+    <img src="images/quantitative_literacy.png" alt="Quantitative Literacy (QL)">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Quantitative Literacy (QL)</h3></div>
   </div>
 
-  <!-- EN - Composition -->
+  <!-- EN -->
   <div class="course-card" style="grid-column: 4; grid-row: 1;">
-    <img src="images/composition.png" alt="Composition">
+    <img src="images/composition.png" alt="Composition (EN)">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Composition (EN)</h3></div>
   </div>
 
-  <!-- IG - International & Global -->
+  <!-- IG -->
   <div class="course-card" style="grid-column: 3; grid-row: 2;">
-    <img src="images/international_global.png" alt="International & Global">
+    <img src="images/international_global.png" alt="International & Global (IG)">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>International & Global (IG)</h3></div>
   </div>
 
-  <!-- LS - Life Science -->
+  <!-- LS -->
   <div class="course-card" style="grid-column: 4; grid-row: 2;">
-    <img src="images/life_science.png" alt="Life Science">
+    <img src="images/life_science.png" alt="Life Science (LS)">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Life Science (LS)</h3></div>
   </div>
 
-  <!-- FA - Fine Arts -->
+  <!-- FA -->
   <div class="course-card" style="grid-column: 1; grid-row: 3;">
-    <img src="images/course2.png" alt="Fine Arts">
+    <img src="images/course2.png" alt="Fine Arts (FA)">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Fine Arts (FA)</h3></div>
   </div>
 
-  <!-- CM - Communication -->
+  <!-- CM -->
   <div class="course-card" style="grid-column: 2; grid-row: 3;">
-    <img src="images/communication.png" alt="Communication">
+    <img src="images/communication.png" alt="Communication (CM)">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Communication (CM)</h3></div>
   </div>
 
-  <!-- LW - Lifelong Wellness -->
-  <div class="course-card" style="grid-column: 3; grid-row: 3;">
-    <img src="images/lifelong_wellness.png" alt="Lifelong Wellness">
+  <!-- HU (BIG) - Humanities -->
+  <div class="course-card" style="grid-column: 3 / span 2; grid-row: 3 / span 2;">
+    <img src="images/course1.png" alt="Humanities (HU)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Humanities (HU)</h3></div>
+  </div>
+
+  <!-- LW -->
+  <div class="course-card" style="grid-column: 1; grid-row: 4;">
+    <img src="images/lifelong_wellness.png" alt="Lifelong Wellness (LW)">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
   </div>
 
-  <!-- PS - Physical Science -->
-  <div class="course-card" style="grid-column: 4; grid-row: 3;">
-    <img src="images/physical_science.png" alt="Physical Science">
+  <!-- PS -->
+  <div class="course-card" style="grid-column: 2; grid-row: 4;">
+    <img src="images/physical_science.png" alt="Physical Science (PS)">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
   </div>
 
-  <!-- SS - Social Science -->
-  <div class="course-card" style="grid-column: 2; grid-row: 4;">
-    <img src="images/social_science.png" alt="Social Science">
+  <!-- SS -->
+  <div class="course-card" style="grid-column: 1; grid-row: 5;">
+    <img src="images/social_science.png" alt="Social Science (SS)">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Social Science (SS)</h3></div>
-  </div>
-
-  <!-- HU - Humanities (Big) -->
-  <div class="course-card" style="grid-column: 3 / span 2; grid-row: 4 / span 2;">
-    <img src="images/course1.png" alt="Humanities">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Humanities (HU)</h3></div>
   </div>
 
 </section>
