--- a/courses.html
+++ b/courses.html
@@ -32,7 +32,7 @@
 
   <section class="courses-container">
 
-  <!-- AI (BIG) -->
+  <!-- AI (Big) -->
   <div class="course-card" style="grid-column: 1 / span 2; grid-row: 1 / span 2;">
     <img src="images/american_institutions.png" alt="American Institutions">
     <div class="overlay"></div>
@@ -47,24 +47,10 @@
   </div>
 
   <!-- EN -->
-  <div class="course-card" style="grid-column: 4; grid-row: 1;">
+  <div class="course-card" style="grid-column: 3; grid-row: 2;">
     <img src="images/composition.png" alt="Composition (EN)">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Composition (EN)</h3></div>
-  </div>
-
-  <!-- IG -->
-  <div class="course-card" style="grid-column: 3; grid-row: 2;">
-    <img src="images/international_global.png" alt="International & Global (IG)">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>International & Global (IG)</h3></div>
-  </div>
-
-  <!-- LS -->
-  <div class="course-card" style="grid-column: 4; grid-row: 2;">
-    <img src="images/life_science.png" alt="Life Science (LS)">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Life Science (LS)</h3></div>
   </div>
 
   <!-- FA -->
@@ -81,11 +67,11 @@
     <div class="text-overlay"><h3>Communication (CM)</h3></div>
   </div>
 
-  <!-- HU (BIG) - Humanities -->
-  <div class="course-card" style="grid-column: 3 / span 2; grid-row: 3 / span 2;">
-    <img src="images/course1.png" alt="Humanities (HU)">
+  <!-- IG -->
+  <div class="course-card" style="grid-column: 3; grid-row: 3;">
+    <img src="images/international_global.png" alt="International & Global (IG)">
     <div class="overlay"></div>
-    <div class="text-overlay"><h3>Humanities (HU)</h3></div>
+    <div class="text-overlay"><h3>International & Global (IG)</h3></div>
   </div>
 
   <!-- LW -->
@@ -95,8 +81,15 @@
     <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
   </div>
 
-  <!-- PS -->
+  <!-- LS -->
   <div class="course-card" style="grid-column: 2; grid-row: 4;">
+    <img src="images/life_science.png" alt="Life Science (LS)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Life Science (LS)</h3></div>
+  </div>
+
+  <!-- PS -->
+  <div class="course-card" style="grid-column: 3; grid-row: 4;">
     <img src="images/physical_science.png" alt="Physical Science (PS)">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
@@ -107,6 +100,13 @@
     <img src="images/social_science.png" alt="Social Science (SS)">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Social Science (SS)</h3></div>
+  </div>
+
+  <!-- HU (BIG) -->
+  <div class="course-card" style="grid-column: 2 / span 2; grid-row: 5 / span 2;">
+    <img src="images/course1.png" alt="Humanities (HU)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Humanities (HU)</h3></div>
   </div>
 
 </section>
