--- a/courses.html
+++ b/courses.html
@@ -30,8 +30,11 @@
     <p>Below are the courses I've completed as part of my education at SLCC.</p>
   </section>
 
+  <div class="courses-wrapper">
   <section class="courses-container">
-
+    <!-- your course cards here -->
+  </section>
+</div>
   <!-- AI (Big) -->
   <div class="course-card" style="grid-column: 1 / span 2; grid-row: 1 / span 2;">
     <img src="images/american_institutions.png" alt="American Institutions">
