--- a/courses.html
+++ b/courses.html
@@ -30,8 +30,19 @@
     <p>Below are the courses I've completed as part of my education at SLCC.</p>
   </section>
 
-  <div class="courses-wrapper">
-  <section class="courses-container">
+  <section class="courses-section">
+
+  <div class="intro">
+    <h2>My College Courses</h2>
+    <p>Below are the courses I've completed as part of my education at SLCC.</p>
+  </div>
+
+  <div class="courses-container">
+    <!-- All your .course-card divs go here -->
+  </div>
+
+</section>
+
     <!-- your course cards here -->
   </section>
 </div>
