--- a/courses.html
+++ b/courses.html
@@ -25,11 +25,6 @@
 
   <!-- MAIN -->
   <main>
-  <section class="intro">
-    <h2>My College Courses</h2>
-    <p>Below are the courses I've completed as part of my education at SLCC.</p>
-  </section>
-
   <section class="courses-section">
 
   <div class="intro">
@@ -37,9 +32,18 @@
     <p>Below are the courses I've completed as part of my education at SLCC.</p>
   </div>
 
-  <div class="courses-container">
-    <!-- All your .course-card divs go here -->
+  <div class="courses-grid">
+    <!-- Example card -->
+    <div class="course-card">
+      <img src="images/american_institutions.png" alt="American Institutions">
+      <div class="overlay"></div>
+      <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
+    </div>
+
+    <!-- Repeat all other cards here exactly the same format -->
   </div>
+
+</section>
 
 </section>
 
