--- a/courses.html
+++ b/courses.html
@@ -33,14 +33,16 @@
   </div>
 
   <div class="courses-grid">
-    <!-- Example card -->
+    <!-- ONLY THESE course-card DIVS BELONG HERE -->
+
     <div class="course-card">
       <img src="images/american_institutions.png" alt="American Institutions">
       <div class="overlay"></div>
       <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
     </div>
 
-    <!-- Repeat all other cards here exactly the same format -->
+    <!-- Add the REST of your cards below, in the same format -->
+
   </div>
 
 </section>
