--- a/courses.html
+++ b/courses.html
@@ -4,13 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Courses - Jesús Lopez Aguilar</title>
-  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <!-- NAVBAR -->
   <nav>
     <div class="nav-container">
       <ul id="nav-links">
@@ -18,124 +16,98 @@
         <li><a href="about.html">About Me</a></li>
         <li><a href="courses.html" class="active-nav-link">Courses</a></li>
         <li><a href="achievements.html">Achievements</a></li>
-        <li><a href="personal-projects.html">Personal Projects</a></li>
+        <li><a href="projects.html">Personal Projects</a></li>
       </ul>
     </div>
   </nav>
 
-  <!-- MAIN -->
   <main>
-  <section class="courses-section">
 
-  <div class="intro">
-    <h2>My College Courses</h2>
-    <p>Below are the courses I've completed as part of my education at SLCC.</p>
-  </div>
+    <section class="courses-section">
 
-  <div class="courses-grid">
-    <!-- ONLY THESE course-card DIVS BELONG HERE -->
+      <div class="intro">
+        <h2>My College Courses</h2>
+        <p>Below are the courses I've completed as part of my education at SLCC.</p>
+      </div>
 
-    <div class="course-card">
-      <img src="images/american_institutions.png" alt="American Institutions">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
-    </div>
+      <div class="courses-grid">
 
-    <!-- Add the REST of your cards below, in the same format -->
+        <!-- Start adding your course cards here -->
 
-  </div>
+        <div class="course-card">
+          <img src="images/american_institutions.png" alt="American Institutions">
+          <div class="overlay"></div>
+          <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
+        </div>
 
-</section>
+        <div class="course-card">
+          <img src="images/communication.png" alt="Communication">
+          <div class="overlay"></div>
+          <div class="text-overlay"><h3>Communication (CM)</h3></div>
+        </div>
 
-</section>
+        <div class="course-card">
+          <img src="images/quantitative_literacy.png" alt="Quantitative Literacy">
+          <div class="overlay"></div>
+          <div class="text-overlay"><h3>Quantitative Literacy (QL)</h3></div>
+        </div>
 
-    <!-- your course cards here -->
-  </section>
-</div>
-  <!-- AI (Big) -->
-  <div class="course-card" style="grid-column: 1 / span 2; grid-row: 1 / span 2;">
-    <img src="images/american_institutions.png" alt="American Institutions">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
-  </div>
+        <div class="course-card">
+          <img src="images/composition.png" alt="Composition">
+          <div class="overlay"></div>
+          <div class="text-overlay"><h3>Composition (EN)</h3></div>
+        </div>
 
-  <!-- QL -->
-  <div class="course-card" style="grid-column: 3; grid-row: 1;">
-    <img src="images/quantitative_literacy.png" alt="Quantitative Literacy (QL)">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Quantitative Literacy (QL)</h3></div>
-  </div>
+        <div class="course-card">
+          <img src="images/lifelong_wellness.png" alt="Lifelong Wellness">
+          <div class="overlay"></div>
+          <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
+        </div>
 
-  <!-- EN -->
-  <div class="course-card" style="grid-column: 3; grid-row: 2;">
-    <img src="images/composition.png" alt="Composition (EN)">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Composition (EN)</h3></div>
-  </div>
+        <div class="course-card">
+          <img src="images/international_global.png" alt="International and Global">
+          <div class="overlay"></div>
+          <div class="text-overlay"><h3>International & Global (IG)</h3></div>
+        </div>
 
-  <!-- FA -->
-  <div class="course-card" style="grid-column: 1; grid-row: 3;">
-    <img src="images/course2.png" alt="Fine Arts (FA)">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Fine Arts (FA)</h3></div>
-  </div>
+        <div class="course-card">
+          <img src="images/life_science.png" alt="Life Science">
+          <div class="overlay"></div>
+          <div class="text-overlay"><h3>Life Science (LS)</h3></div>
+        </div>
 
-  <!-- CM -->
-  <div class="course-card" style="grid-column: 2; grid-row: 3;">
-    <img src="images/communication.png" alt="Communication (CM)">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Communication (CM)</h3></div>
-  </div>
+        <div class="course-card">
+          <img src="images/course2.png" alt="Fine Arts">
+          <div class="overlay"></div>
+          <div class="text-overlay"><h3>Fine Arts (FA)</h3></div>
+        </div>
 
-  <!-- IG -->
-  <div class="course-card" style="grid-column: 3; grid-row: 3;">
-    <img src="images/international_global.png" alt="International & Global (IG)">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>International & Global (IG)</h3></div>
-  </div>
+        <div class="course-card">
+          <img src="images/social_science.png" alt="Social Science">
+          <div class="overlay"></div>
+          <div class="text-overlay"><h3>Social Science (SS)</h3></div>
+        </div>
 
-  <!-- LW -->
-  <div class="course-card" style="grid-column: 1; grid-row: 4;">
-    <img src="images/lifelong_wellness.png" alt="Lifelong Wellness (LW)">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
-  </div>
+        <div class="course-card">
+          <img src="images/physical_science.png" alt="Physical Science">
+          <div class="overlay"></div>
+          <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
+        </div>
 
-  <!-- LS -->
-  <div class="course-card" style="grid-column: 2; grid-row: 4;">
-    <img src="images/life_science.png" alt="Life Science (LS)">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Life Science (LS)</h3></div>
-  </div>
+        <div class="course-card">
+          <img src="images/course1.png" alt="Humanities">
+          <div class="overlay"></div>
+          <div class="text-overlay"><h3>Humanities (HU)</h3></div>
+        </div>
 
-  <!-- PS -->
-  <div class="course-card" style="grid-column: 3; grid-row: 4;">
-    <img src="images/physical_science.png" alt="Physical Science (PS)">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
-  </div>
+      </div>
 
-  <!-- SS -->
-  <div class="course-card" style="grid-column: 1; grid-row: 5;">
-    <img src="images/social_science.png" alt="Social Science (SS)">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Social Science (SS)</h3></div>
-  </div>
+    </section>
 
-  <!-- HU (BIG) -->
-  <div class="course-card" style="grid-column: 2 / span 2; grid-row: 5 / span 2;">
-    <img src="images/course1.png" alt="Humanities (HU)">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Humanities (HU)</h3></div>
-  </div>
+  </main>
 
-</section>
-
-</main>
-
-  <!-- FOOTER -->
   <footer>
-    © 2025 Jesús Lopez Aguilar. All rights reserved.
+    <p>© 2025 Jesús Lopez Aguilar. All rights reserved.</p>
   </footer>
 
 </body>
