--- a/courses.html
+++ b/courses.html
@@ -21,8 +21,7 @@
     </div>
   </nav>
 
-  <main>
-
+  <main class="courses-page">
     <section class="courses-section">
 
       <div class="intro">
