--- a/courses.html
+++ b/courses.html
@@ -5,9 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Courses - Jesús Lopez Aguilar</title>
   <link rel="stylesheet" href="style.css">
-</head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Courses - Jesús Lopez Aguilar</title>
+    <link rel="stylesheet" href="style.css">
 
-<body>
+    <style>
+        body {
+            background-color: blue !important;
+        }
+    </style>
+    </head>
 
   <nav>
     <div class="nav-container">
