--- a/courses.html
+++ b/courses.html
@@ -121,5 +121,6 @@
     <p>© 2025 Jesús Lopez Aguilar. All rights reserved.</p>
   </footer>
 
+<script src="js/script.js"></script>
 </body>
 </html>
