--- a/courses.html
+++ b/courses.html
@@ -10,117 +10,117 @@
 
 <body>
 
-  <!-- NAVBAR -->
-  <nav>
-    <div class="nav-container">
-      <ul id="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="courses.html" class="active-nav-link">Courses</a></li>
-        <li><a href="achievements.html">Achievements</a></li>
-        <li><a href="personal-projects.html">Personal Projects</a></li>
-      </ul>
-    </div>
-  </nav>
+<!-- NAVBAR -->
+<nav>
+  <div class="nav-container">
+    <ul id="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Me</a></li>
+      <li><a href="courses.html" class="active-nav-link">Courses</a></li>
+      <li><a href="achievements.html">Achievements</a></li>
+      <li><a href="personal-projects.html">Personal Projects</a></li>
+    </ul>
+  </div>
+</nav>
 
-  <!-- MAIN -->
-  <main class="courses-page">
+<!-- MAIN -->
+<main class="courses-page">
 
-    <!-- INTRO -->
-    <section class="intro">
-      <h2>My College Courses</h2>
-      <p>Below are the courses I've completed as part of my education at SLCC.</p>
-    </section>
+<section class="intro">
+  <h2>My College Courses</h2>
+  <p>Below are the courses I've completed as part of my education at SLCC.</p>
+</section>
 
-    <!-- COURSES GRID -->
-    <section class="courses-grid">
+<section class="courses-grid">
 
-      <!-- AI (Big) -->
-      <div class="course-card" style="grid-column: 1 / span 2; grid-row: 1 / span 2;">
-        <img src="images/american_institutions.png" alt="American Institutions (AI)">
-        <div class="overlay"></div>
-        <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
-      </div>
+  <!-- AI (Big) -->
+  <div class="course-card" style="grid-column: 1 / span 2; grid-row: 1 / span 2;">
+    <img src="images/american_institutions.png" alt="American Institutions">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
+  </div>
 
-      <!-- QL -->
-      <div class="course-card" style="grid-column: 3; grid-row: 1;">
-        <img src="images/quantitative_literacy.png" alt="Quantitative Literacy (QL)">
-        <div class="overlay"></div>
-        <div class="text-overlay"><h3>Quantitative Literacy (QL)</h3></div>
-      </div>
+  <!-- QL -->
+  <div class="course-card" style="grid-column: 3; grid-row: 1;">
+    <img src="images/quantitative_literacy.png" alt="Quantitative Literacy (QL)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Quantitative Literacy (QL)</h3></div>
+  </div>
 
-      <!-- EN -->
-      <div class="course-card" style="grid-column: 3; grid-row: 2;">
-        <img src="images/composition.png" alt="Composition (EN)">
-        <div class="overlay"></div>
-        <div class="text-overlay"><h3>Composition (EN)</h3></div>
-      </div>
+  <!-- EN -->
+  <div class="course-card" style="grid-column: 3; grid-row: 2;">
+    <img src="images/composition.png" alt="Composition (EN)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Composition (EN)</h3></div>
+  </div>
 
-      <!-- FA -->
-      <div class="course-card" style="grid-column: 1; grid-row: 3;">
-        <img src="images/course2.png" alt="Fine Arts (FA)">
-        <div class="overlay"></div>
-        <div class="text-overlay"><h3>Fine Arts (FA)</h3></div>
-      </div>
+  <!-- FA -->
+  <div class="course-card" style="grid-column: 1; grid-row: 3;">
+    <img src="images/course2.png" alt="Fine Arts (FA)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Fine Arts (FA)</h3></div>
+  </div>
 
-      <!-- CM -->
-      <div class="course-card" style="grid-column: 2; grid-row: 3;">
-        <img src="images/communication.png" alt="Communication (CM)">
-        <div class="overlay"></div>
-        <div class="text-overlay"><h3>Communication (CM)</h3></div>
-      </div>
+  <!-- CM -->
+  <div class="course-card" style="grid-column: 2; grid-row: 3;">
+    <img src="images/communication.png" alt="Communication (CM)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Communication (CM)</h3></div>
+  </div>
 
-      <!-- IG -->
-      <div class="course-card" style="grid-column: 3; grid-row: 3;">
-        <img src="images/international_global.png" alt="International & Global (IG)">
-        <div class="overlay"></div>
-        <div class="text-overlay"><h3>International & Global (IG)</h3></div>
-      </div>
+  <!-- IG -->
+  <div class="course-card" style="grid-column: 3; grid-row: 3;">
+    <img src="images/international_global.png" alt="International & Global (IG)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>International & Global (IG)</h3></div>
+  </div>
 
-      <!-- LW -->
-      <div class="course-card" style="grid-column: 1; grid-row: 4;">
-        <img src="images/lifelong_wellness.png" alt="Lifelong Wellness (LW)">
-        <div class="overlay"></div>
-        <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
-      </div>
+  <!-- LW -->
+  <div class="course-card" style="grid-column: 1; grid-row: 4;">
+    <img src="images/lifelong_wellness.png" alt="Lifelong Wellness (LW)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
+  </div>
 
-      <!-- LS -->
-      <div class="course-card" style="grid-column: 2; grid-row: 4;">
-        <img src="images/life_science.png" alt="Life Science (LS)">
-        <div class="overlay"></div>
-        <div class="text-overlay"><h3>Life Science (LS)</h3></div>
-      </div>
+  <!-- LS -->
+  <div class="course-card" style="grid-column: 2; grid-row: 4;">
+    <img src="images/life_science.png" alt="Life Science (LS)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Life Science (LS)</h3></div>
+  </div>
 
-      <!-- PS -->
-      <div class="course-card" style="grid-column: 3; grid-row: 4;">
-        <img src="images/physical_science.png" alt="Physical Science (PS)">
-        <div class="overlay"></div>
-        <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
-      </div>
+  <!-- PS -->
+  <div class="course-card" style="grid-column: 3; grid-row: 4;">
+    <img src="images/physical_science.png" alt="Physical Science (PS)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
+  </div>
 
-      <!-- SS -->
-      <div class="course-card" style="grid-column: 1; grid-row: 5;">
-        <img src="images/social_science.png" alt="Social Science (SS)">
-        <div class="overlay"></div>
-        <div class="text-overlay"><h3>Social Science (SS)</h3></div>
-      </div>
+  <!-- SS -->
+  <div class="course-card" style="grid-column: 1; grid-row: 5;">
+    <img src="images/social_science.png" alt="Social Science (SS)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Social Science (SS)</h3></div>
+  </div>
 
-      <!-- HU (Big) -->
-      <div class="course-card" style="grid-column: 2 / span 2; grid-row: 5 / span 2;">
-        <img src="images/course1.png" alt="Humanities (HU)">
-        <div class="overlay"></div>
-        <div class="text-overlay"><h3>Humanities (HU)</h3></div>
-      </div>
+  <!-- HU (BIG) -->
+  <div class="course-card" style="grid-column: 2 / span 2; grid-row: 5 / span 2;">
+    <img src="images/course1.png" alt="Humanities (HU)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Humanities (HU)</h3></div>
+  </div>
 
-    </section>
+</section>
 
-  </main>
+</main>
 
-  <!-- FOOTER -->
-  <footer>
-    <p>© 2025 Jesús Lopez Aguilar. All rights reserved.</p>
-  </footer>
+<!-- FOOTER -->
+<footer>
+  © 2025 Jesús Lopez Aguilar. All rights reserved.
+</footer>
 
+<!-- FIX THIS!!! -->
 <script src="js/script.js"></script>
+
 </body>
 </html>
