--- a/courses.html
+++ b/courses.html
@@ -124,3 +124,19 @@
 
 </body>
 </html>
+<!-- HAMBURGER + MOBILE NAV -->
+<div class="hamburger-menu" id="hamburger">
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
+
+<div class="mobile-nav" id="mobile-nav">
+  <a href="index.html">Home</a>
+  <a href="about.html">About Me</a>
+  <a href="courses.html" class="link-active-glow">Courses</a>
+  <a href="achievements.html">Achievements</a>
+  <a href="personal-projects.html">Personal Projects</a>
+</div>
+
+<script src="js/script.js"></script>
