--- a/courses.html
+++ b/courses.html
@@ -26,12 +26,20 @@
 <!-- MAIN -->
 <main class="courses-page">
 
-<section class="intro">
-  <h2>My College Courses</h2>
-  <p>Below are the courses I've completed as part of my education at SLCC.</p>
+<section class="courses-section">
+
+  <div class="intro">
+    <h2>My College Courses</h2>
+    <p>Below are the courses I've completed as part of my education at SLCC.</p>
+  </div>
+
+  <div class="courses-grid">
+    <!-- your course cards go here -->
+  </div>
+
 </section>
 
-<section class="courses-grid">
+</main>
 
   <!-- AI (Big) -->
   <div class="course-card" style="grid-column: 1 / span 2; grid-row: 1 / span 2;">
