--- a/courses.html
+++ b/courses.html
@@ -42,7 +42,7 @@
 <main class="courses-page">
 
   <section class="intro fade-in-section">
-    <h2>My College Courses</h2>
+    <h2>TOP-PICKS TOPICS</h2>
     <p>Below are the courses I've completed as part of my education at SLCC.</p>
   </section>
 
