--- a/courses.html
+++ b/courses.html
@@ -47,75 +47,74 @@
   </section>
 
   <section class="courses-grid">
-  
-    <!-- Course Cards -->
-    <div class="course-card fade-in-section" style="grid-column: 1 / span 2; grid-row: 1 / span 2;">
-      <img src="images/american_institutions.png" alt="American Institutions">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
-    </div>
 
-    <div class="course-card fade-in-section" style="grid-column: 3; grid-row: 1;">
-      <img src="images/quantitative_literacy.png" alt="Quantitative Literacy (QL)">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>Quantitative Literacy (QL)</h3></div>
-    </div>
+  <a href="ai.html" class="course-card fade-in-section">
+    <img src="images/american_institutions.png" alt="American Institutions (AI)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
+  </a>
 
-    <div class="course-card fade-in-section" style="grid-column: 3; grid-row: 2;">
-      <img src="images/composition.png" alt="Composition (EN)">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>Composition (EN)</h3></div>
-    </div>
+  <a href="cm.html" class="course-card fade-in-section">
+    <img src="images/communication.png" alt="Communication (CM)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Communication (CM)</h3></div>
+  </a>
 
-    <div class="course-card fade-in-section" style="grid-column: 1; grid-row: 3;">
-      <img src="images/course2.png" alt="Fine Arts (FA)">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>Fine Arts (FA)</h3></div>
-    </div>
+  <a href="ql.html" class="course-card fade-in-section">
+    <img src="images/quantitative_literacy.png" alt="Quantitative Literacy (QL)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Quantitative Literacy (QL)</h3></div>
+  </a>
 
-    <div class="course-card fade-in-section" style="grid-column: 2; grid-row: 3;">
-      <img src="images/communication.png" alt="Communication (CM)">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>Communication (CM)</h3></div>
-    </div>
+  <a href="en.html" class="course-card fade-in-section">
+    <img src="images/composition.png" alt="Composition (EN)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Composition (EN)</h3></div>
+  </a>
 
-    <div class="course-card fade-in-section" style="grid-column: 3; grid-row: 3;">
-      <img src="images/international_global.png" alt="International & Global (IG)">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>International & Global (IG)</h3></div>
-    </div>
+  <a href="lw.html" class="course-card fade-in-section">
+    <img src="images/lifelong_wellness.png" alt="Lifelong Wellness (LW)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
+  </a>
 
-    <div class="course-card fade-in-section" style="grid-column: 1; grid-row: 4;">
-      <img src="images/lifelong_wellness.png" alt="Lifelong Wellness (LW)">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
-    </div>
+  <a href="ig.html" class="course-card fade-in-section">
+    <img src="images/international_global.png" alt="International & Global (IG)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>International & Global (IG)</h3></div>
+  </a>
 
-    <div class="course-card fade-in-section" style="grid-column: 2; grid-row: 4;">
-      <img src="images/life_science.png" alt="Life Science (LS)">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>Life Science (LS)</h3></div>
-    </div>
+  <a href="ls.html" class="course-card fade-in-section">
+    <img src="images/life_science.png" alt="Life Science (LS)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Life Science (LS)</h3></div>
+  </a>
 
-    <div class="course-card fade-in-section" style="grid-column: 3; grid-row: 4;">
-      <img src="images/physical_science.png" alt="Physical Science (PS)">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
-    </div>
+  <a href="fa.html" class="course-card fade-in-section">
+    <img src="images/course2.png" alt="Fine Arts (FA)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Fine Arts (FA)</h3></div>
+  </a>
 
-    <div class="course-card fade-in-section" style="grid-column: 1; grid-row: 5;">
-      <img src="images/social_science.png" alt="Social Science (SS)">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>Social Science (SS)</h3></div>
-    </div>
+  <a href="ss.html" class="course-card fade-in-section">
+    <img src="images/social_science.png" alt="Social Science (SS)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Social Science (SS)</h3></div>
+  </a>
 
-    <div class="course-card fade-in-section" style="grid-column: 2 / span 2; grid-row: 5 / span 2;">
-      <img src="images/course1.png" alt="Humanities (HU)">
-      <div class="overlay"></div>
-      <div class="text-overlay"><h3>Humanities (HU)</h3></div>
-    </div>
+  <a href="ps.html" class="course-card fade-in-section">
+    <img src="images/physical_science.png" alt="Physical Science (PS)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
+  </a>
 
-  </section>
+  <a href="hu.html" class="course-card fade-in-section">
+    <img src="images/course1.png" alt="Humanities (HU)">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Humanities (HU)</h3></div>
+  </a>
+
+</section>
 
 </main>
 
