--- a/american_institutions.html
+++ b/american_institutions.html
@@ -1,92 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>American Institutions (AI) - Jesús Lopez Aguilar</title>
-  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet"/>
 </head>
-
 <body>
 
-<nav>
-  <div class="nav-container">
-    <ul id="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Me</a></li>
-      <li><a href="courses.html" class="active-nav-link">Courses</a></li>
-      <li><a href="achievements.html">Achievements</a></li>
-      <li><a href="personal-projects.html">Personal Projects</a></li>
-    </ul>
+  <!-- NAVBAR -->
+  <nav>
+    <div class="nav-container">
+      <ul id="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="courses.html" class="active-nav-link">Courses</a></li>
+        <li><a href="achievements.html">Achievements</a></li>
+        <li><a href="personal-projects.html">Personal Projects</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- HAMBURGER MENU -->
+  <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
+    <div></div><div></div><div></div>
   </div>
-</nav>
+  <div class="mobile-nav" id="mobile-nav">
+    <a href="index.html">Home</a>
+    <a href="about.html">About Me</a>
+    <a href="courses.html" class="link-active-glow">Courses</a>
+    <a href="achievements.html">Achievements</a>
+    <a href="personal-projects.html">Personal Projects</a>
+  </div>
 
-<div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
-  <div></div>
-  <div></div>
-  <div></div>
-</div>
+  <!-- MAIN -->
+  <main>
+    <div class="centered-content-block fade-in-section">
+      <h1>American Institutions (AI)</h1>
+      <h2>Political Science 1100 | SLCC</h2>
+      <p>This course was about understanding the U.S. Constitution, civil liberties, how democracy actually functions (and how it sometimes doesn’t), and the role of institutions in shaping everyday life.</p>
+      <p>I took this class during [insert semester], and it played a huge role in shaping my critical thinking. We had debates on current issues, landmark Supreme Court cases, and what “freedom” means in a diverse country like the U.S.</p>
+      <p>One assignment I really liked was writing a mock bill to address a local policy issue — mine was about youth voting accessibility. I added humor, research, and even some persuasive drama.</p>
+      <a href="courses.html" class="button">← Back to Courses</a>
+    </div>
+  </main>
 
-<div class="mobile-nav" id="mobile-nav">
-  <a href="index.html">Home</a>
-  <a href="about.html">About Me</a>
-  <a href="courses.html">Courses</a>
-  <a href="achievements.html">Achievements</a>
-  <a href="personal-projects.html">Personal Projects</a>
-</div>
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2025 Jesús Lopez Aguilar. All rights reserved.</p>
+  </footer>
 
-<main class="centered-content-block fade-in-section">
-  <h1>American Institutions (AI)</h1>
-  <p>Welcome to my American Institutions (AI) course page! Content coming soon.</p>
-</main>
+  <!-- Scripts -->
+  <script>
+    function toggleMenu() {
+      const mobileNav = document.getElementById('mobile-nav');
+      const hamburgerIcon = document.getElementById('hamburger-menu');
+      const body = document.body;
 
-<footer>
-  <p>© 2025 Jesús Lopez Aguilar. All rights reserved.</p>
-</footer>
-
-<script>
-function toggleMenu() {
-  const mobileNav = document.getElementById('mobile-nav');
-  const hamburgerIcon = document.getElementById('hamburger-menu');
-  const body = document.body;
-
-  mobileNav.classList.toggle('active');
-  hamburgerIcon.classList.toggle('is-active');
-
-  if (mobileNav.classList.contains('active')) {
-    body.classList.add('no-scroll');
-  } else {
-    body.classList.remove('no-scroll');
-  }
-}
-</script>
-
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-  const faders = document.querySelectorAll('.fade-in-section');
-
-  const appearOptions = {
-    threshold: 0.2,
-    rootMargin: "0px 0px -100px 0px"
-  };
-
-  const appearOnScroll = new IntersectionObserver(function(entries, appearOnScroll) {
-    entries.forEach(entry => {
-      if (!entry.isIntersecting) {
-        return;
-      } else {
-        entry.target.classList.add('is-visible');
-        appearOnScroll.unobserve(entry.target);
-      }
-    });
-  }, appearOptions);
-
-  faders.forEach(fader => {
-    appearOnScroll.observe(fader);
-  });
-});
-</script>
-
+      mobileNav.classList.toggle('active');
+      hamburgerIcon.classList.toggle('is-active');
+      body.classList.toggle('no-scroll', mobileNav.classList.contains('active'));
+    }
+  </script>
 </body>
 </html>
